@@ -16,6 +16,22 @@ elsif $site_libdir !~ Regexp.new(Regexp.quote($version))
   $site_libdir = File.join($site_libdir, $version)
 end
 
+def remove_stubs
+  Dir.glob("{#{($LOAD_PATH).join(',')}}/**/*.rb").collect {|file| File.expand_path(file)}.uniq.each do |file|
+    unless File.directory?(file)
+      if(File.read(file, 40) =~ /^# This file was generated by RubyGems/ && File.readlines(file).size == 11) then
+        print "Remove probable stub file #{file}? [y/n]"
+        answer = gets
+        if(answer =~ /y/i) then
+          File.unlink(file)
+        else
+          puts "Skipping file #{file}"
+        end
+      end
+    end
+  end
+end
+
 def install_rb(srcdir = nil)
   ### Install 'lib' files.
 
@@ -92,6 +108,8 @@ def install_rb(srcdir = nil)
     end
   end
   
+  remove_stubs 
+
   ## Move old gems if installed
 
   ## Install the 'sources' package bundled with RubyGems.
