@@ -1,3 +1,6 @@
+2004-09-08  Chad Fowler <chad@chadfowler.com>
+  * install.rb: added stub removal to the install process
+
 2004-09-06  Chad Fowler <chad@chadfowler.com>
   * test/test_package.rb: Fixed failing unit test as per Mauricio's email to 
    the rubygems list.
